--- a/src/blocks/modules/demo/demo.html
+++ b/src/blocks/modules/demo/demo.html
@@ -24,7 +24,7 @@
 		<a href="8_control.html" class="demo__link">
 			8. Отдел технического контроля
 		</a>
-		<a href="9_singlet.html" class="demo__link">
+		<a href="9_single.html" class="demo__link">
 			9. Статья
 		</a>
 		<a href="10_grid.html" class="demo__link">
