--- a/src/blocks/modules/header-bottom/header-bottom.html
+++ b/src/blocks/modules/header-bottom/header-bottom.html
@@ -1,5 +1,5 @@
 <div class="header-bottom">
-	<a href="" class="header-bottom__logo">
+	<a href="/" class="header-bottom__logo">
 		<img src="img/logo-color.png" alt="Логотип">
 	</a>
 	<nav class="header-bottom__nav">
