--- a/src/blocks/modules/header-bottom/header-bottom.html
+++ b/src/blocks/modules/header-bottom/header-bottom.html
@@ -1,4 +1,4 @@
-<div class="header-bottom">
+<div class="header-bottom mob-hidden">
 	<a href="/" class="header-bottom__logo">
 		<img src="img/logo-color.png" alt="Логотип">
 	</a>
