--- a/src/blocks/modules/header-top/header-top.html
+++ b/src/blocks/modules/header-top/header-top.html
@@ -1,5 +1,5 @@
 <div class="header-top">
-	<div class="header-top__block">
+	<div class="header-top__block mob-hidden">
 		<svg>
 			<use xlink:href="img/sprites/sprite.svg#icon-topline-clock"></use>
 		</svg>
@@ -7,7 +7,7 @@
 			Пн-Пт с 10 до 19
 		</span>
 	</div>
-	<a href="mailto:info@39rpk.ru" class="header-top__block header-top__block--link">
+	<a href="mailto:info@39rpk.ru" class="header-top__block header-top__block--link mob-hidden">
 		<svg>
 			<use xlink:href="img/sprites/sprite.svg#icon-topline-mail"></use>
 		</svg>
@@ -23,7 +23,7 @@
 			+7 (4012) 75-01-55
 		</span>
 	</a>
-	<a href="tel:+79814750155" class="header-top__block header-top__block--link">
+	<a href="tel:+79814750155" class="header-top__block header-top__block--link mob-hidden">
 		<svg>
 			<use xlink:href="img/sprites/sprite.svg#icon-telegram"></use>
 		</svg>
@@ -37,9 +37,14 @@
 			+7 981-475-01-55
 		</span>
 	</a>
-	<a href="" class="btn btn--head btn--orange">
+	<a href="" class="btn btn--head btn--orange mob-hidden">
 		<span>
 			Заказать звонок
 		</span>
+	</a>
+	<a href="#mmenu" class="header-top__btn-menu desc-hidden">
+		<svg>
+			<use xlink:href="img/sprites/sprite.svg#icon-menu"></use>
+		</svg>
 	</a>
 </div>
