--- a/src/blocks/modules/header-top/header-top.html
+++ b/src/blocks/modules/header-top/header-top.html
@@ -1,4 +1,7 @@
 <div class="header-top">
+	<a href="/" class="header-top__logo desc-hidden">
+		<img class="header-top__logo-img" src="img/logo-light.svg" alt="Ракета">
+	</a>
 	<div class="header-top__block mob-hidden">
 		<svg>
 			<use xlink:href="img/sprites/sprite.svg#icon-topline-clock"></use>
