--- a/src/blocks/modules/footer/footer.html
+++ b/src/blocks/modules/footer/footer.html
@@ -1,30 +1,44 @@
 <div class="footer mob-center">
-	<div class="footer__columns mb-40">
-		<div class="footer__column footer__column--4 mob-full">
-			<a href="" class="footer__link">
-				Главная
-			</a>
-			<a href="" class="footer__link">
-				Наши работы
-			</a>
-			<a href="" class="footer__link">
-				Отдел технического контроля
-			</a>
-			<a href="" class="footer__link">
-				Акции
-			</a>
-			<a href="" class="footer__link">
-				Контакты
-			</a>
-			<a href="/" class="footer__logo">
-				<img src="img/logo-light.svg" alt="Логотип">
-			</a>
+	<div class="columns">
+		<div class="columns__column columns__column--grow columns__column--4 mob-full mb-40">
+			@@include("../footer-social/footer-social.html")
+			<nav class="footer__main-nav mb-20">
+				<a href="" class="footer__link">
+					Главная
+				</a>
+				<a href="" class="footer__link">
+					Наши работы
+				</a>
+				<a href="" class="footer__link">
+					Отдел технического контроля
+				</a>
+				<a href="" class="footer__link">
+					Акции
+				</a>
+				<a href="" class="footer__link">
+					Контакты
+				</a>
+			</nav>
+			<div class="footer__logos">
+				<a href="/" class="footer__logo mb-20">
+					<img src="img/logo-light.svg" alt="Логотип">
+				</a>
+				<a href="https://mbkaliningrad.ru/" target="_blank" class="footer__logo mb-20">
+					<img src="img/logo-mb.svg" alt="МБ-Калининград">
+				</a>
+			</div>
+			
+			<p class="text text--small">
+				При содействии Центра поддержки 
+				предпринимательства Калининградской 
+				области <a href="https://mbkaliningrad.ru/" target="_blank">www.mbkaliningrad.ru</a>
+			</p>
 		</div>
-		<div class="footer__column footer__column--8">
+		<div class="columns__column columns__column--8 mob-full mb-40">
 			<p class="footer__title">
 				Услуги:
 			</p>
-			<div class="footer__nav">
+			<div class="footer__nav mb-30">
 				<a href="" class="footer__link footer__link--light">
 					Разработка дизайна
 				</a>
@@ -65,40 +79,37 @@
 					Аренда фотозон и выставочного оборудования
 				</a>
 			</div>
-		</div>
-	</div>
-	<div class="columns columns--center">
-		<div class="columns__column columns__column--4 mb-25">
-			@@include("../footer-social/footer-social.html")
-		</div>
-		<div class="columns__column columns__column--4 mb-25">
-			<a href="" class="btn btn--tab">
-				<svg class="btn__icon">
-					<use xlink:href="img/sprites/sprite.svg#icon-btn-accent"></use>
-				</svg>
-				<span>
-					Требования к макетам
-				</span>
-			</a>
-		</div>
-		<div class="columns__column columns__column--4 mb-25">
-			<a href="#modal-write" class="btn btn--orange" data-fancybox>
-				<span>
-					Заказать звонок
-				</span>
-			</a>
-		</div>
-	</div>
-	<div class="columns">
-		<div class="columns__column columns__column--8">
-			<p class="text text--small">
-				© ООО "РАКЕТА" Все права защищены  2020
-			</p>
-		</div>
-		<div class="columns__column columns__column--4">
-			<p class="text text--small">
-				Разработано <a href="">#diez technologies</a>
-			</p>
+			<div class="columns columns--center">
+				<div class="columns__column columns__column--6 mb-25">
+					<a href="" class="btn btn--footer btn--tab">
+						<svg class="btn__icon">
+							<use xlink:href="img/sprites/sprite.svg#icon-btn-accent"></use>
+						</svg>
+						<span>
+							Требования к макетам
+						</span>
+					</a>
+				</div>
+				<div class="columns__column columns__column--6 mb-25">
+					<a href="#modal-write" class="btn btn--footer btn--orange" data-fancybox>
+						<span>
+							Заказать звонок
+						</span>
+					</a>
+				</div>
+			</div>
+			<div class="columns">
+				<div class="columns__column columns__column--6">
+					<p class="text text--small">
+						© ООО "РАКЕТА" Все права защищены  2020
+					</p>
+				</div>
+				<div class="columns__column columns__column--6">
+					<p class="text text--small">
+						Разработано <a href="">#diez technologies</a>
+					</p>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
